--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <div id="app" class="app">
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
