--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>Logolino</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link rel="stylesheet" href="build/styles.css">
   </head>
   <body>
     <div id="app" class="app">
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
