Show loading screen even if no js is loaded

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app" class="app">
+      <div class="screen loading">
+        <div class="sign"></div>
+      </div>
     </div>
     <script src="build/bundle.js"></script>
   </body>
