--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>Logolino</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz">
-    <link rel="stylesheet" href="build/styles.css">
   </head>
   <body>
     <div id="app" class="app">
@@ -12,6 +11,6 @@
         <div class="sign"></div>
       </div>
     </div>
-    <script src="build/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
