--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <title>Logolino</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz">
+    <link rel="icon" type="image/png" href="images/icons/favicon.png">
+    <link href="images/icons/icon-normal.png" rel="apple-touch-icon" />
+    <link href="images/icons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="images/icons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="images/icons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="images/icons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="images/icons/icon-hires.png" rel="icon" sizes="192x192" />
+    <link href="images/icons/icon-normal.png" rel="icon" sizes="128x128" />
   </head>
   <body>
     <div id="app" class="app">
