Fix style link and remove old publish command

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="images/icons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
     <link href="images/icons/icon-hires.png" rel="icon" sizes="192x192" />
     <link href="images/icons/icon-normal.png" rel="icon" sizes="128x128" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="app" class="app">
